--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
   "name": "jira-cmd",
   "description": "Another JIRA Command Line Interface",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "author": "Germán Robledo <germanrcuriel@gmail.com>",
+  "bin": {
+    "jira": "./bin/jira.js"
+  },
   "dependencies": {
-    "cli-table": "~0.2.0",
-    "commander": "~1.1.1",
+    "cli-table": "^0.3.1",
+    "commander": "^2.7.1",
     "openurl": "^1.1.0",
-    "requirejs": "~2.1.5",
-    "superagent": "~0.13.0"
+    "require-directory": "^2.1.0",
+    "superagent": "^1.1.0"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.9.1",
+    "mocha": "^2.2.1",
+    "should": "^5.2.0",
+    "sinon": "^1.14.1"
   },
   "engines": {
-    "node": ">= 0.8"
+    "node": ">= 0.10"
+  },
+  "scripts": {
+    "build": "coffee -c -o lib src",
+    "clean": "rm -rf lib",
+    "prepublish": "npm run build",
+    "test": "./node_modules/.bin/mocha"
   },
   "keywords": [
     "jira",
@@ -25,8 +40,5 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/germanrcuriel/jira-cmd.git"
-  },
-  "bin": {
-    "jira": "./bin/jira.js"
   }
 }
